@@ -1,7 +1,5 @@
 package lab5.entity;
 
-import org.apache.commons.lang3.StringUtils;
-
 import lab5.managers.ConsoleManager;
 import lab5.utility.builders.AlbumBuilder;
 import lab5.utility.validators.musicband.bestalbum.AlbumNameValidator;
@@ -34,7 +32,13 @@ public class Album implements Comparable<Album>{
         ConsoleManager.println("Введите название музыкального альбома (при наличии).");
         ConsoleManager.println("Название музыкального альбома не должно быть пустым и не должно содержать кавычки.");
         String name = ConsoleManager.askObject();
-        if (!StringUtils.isBlank(name)) {
+        if (name == null) {
+            name = null;
+        }
+        else if (name.isBlank()) {
+            name = null;
+        }
+        else {
             AlbumNameValidator validator = new AlbumNameValidator();
             if (!validator.validate(name)) {
                 ConsoleManager.println("Введено некорректное название музыкального альбома.");
@@ -43,9 +47,6 @@ public class Album implements Comparable<Album>{
                 // запрашиваем у пользователя данные, пока не введёт подходящие
                 name = askAlbumName();
             }
-        }
-        else {
-            name = null;
         }
         return name;
     }
